scrollbar issues

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -745,7 +745,7 @@
 }
 
 .joblist-page{	
-	height:84vh;
+	height:83.4vh;
 	overflow: auto;
 	padding-top: 20px;
 }
